# mod_geoip

./: CMakeLists.txt  Configure_VS2017_XP_x64.bat  README.md  VS2017_XP_x64.bat
Projects/: CMakeLists.txt
Projects/gtac_geoip/: CMakeLists.txt  Main.cpp
Projects/mod_geoip/: CMakeLists.txt  Main.cpp
SDK/Helper/: SDKHelper.h
